--- a/Topic 05 - Model Tuning/C31 - Grid Search CV.ipynb
+++ b/Topic 05 - Model Tuning/C31 - Grid Search CV.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Grid search "
+    "# Grid search CV"
    ],
    "metadata": {}
   },
@@ -18,22 +18,22 @@
    "cell_type": "code",
    "execution_count": 1,
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from sklearn.datasets import load_breast_cancer\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "\n",
-    "# Load data\n",
-    "dataObj = load_breast_cancer()\n",
-    "X = dataObj.data\n",
-    "y = dataObj.target\n",
-    "\n",
-    "# Splitting data\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, \n",
-    "    stratify=y,\n",
-    "    test_size=0.20,\n",
+    "import pandas as pd\r\n",
+    "import numpy as np\r\n",
+    "from sklearn.datasets import load_breast_cancer\r\n",
+    "from sklearn.model_selection import train_test_split\r\n",
+    "from sklearn.preprocessing import StandardScaler\r\n",
+    "from sklearn.pipeline import Pipeline\r\n",
+    "\r\n",
+    "# Load data\r\n",
+    "dataObj = load_breast_cancer()\r\n",
+    "X = dataObj.data\r\n",
+    "y = dataObj.target\r\n",
+    "\r\n",
+    "# Splitting data\r\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, \r\n",
+    "    stratify=y,\r\n",
+    "    test_size=0.20,\r\n",
     "    random_state=1)"
    ],
    "outputs": [],
@@ -43,9 +43,9 @@
    "cell_type": "code",
    "execution_count": 2,
    "source": [
-    "from sklearn.svm import SVC\n",
-    "\n",
-    "pipe_svc = Pipeline([('scl', StandardScaler()),\n",
+    "from sklearn.svm import SVC\r\n",
+    "\r\n",
+    "pipe_svc = Pipeline([('scl', StandardScaler()),\r\n",
     "            ('clf', SVC(random_state=1))])"
    ],
    "outputs": [],
@@ -55,8 +55,8 @@
    "cell_type": "code",
    "execution_count": 3,
    "source": [
-    "# Get parameter names\n",
-    "for k, v in pipe_svc.get_params().items():\n",
+    "# Get parameter names\r\n",
+    "for k, v in pipe_svc.get_params().items():\r\n",
     "    print(f\"{k:35.35s}: {str(v):35.35s}...\")"
    ],
    "outputs": [
@@ -96,15 +96,15 @@
    "cell_type": "code",
    "execution_count": 4,
    "source": [
-    "param_range = [0.0001, 0.001, 0.01, 0.1, 1.0, 10.0, 100.0, 1000.0]\n",
-    "\n",
-    "set1 = {'clf__C': param_range,\n",
-    "        'clf__kernel': ['linear']}\n",
-    "\n",
-    "set2 = {'clf__C': param_range,\n",
-    "        'clf__gamma': param_range,\n",
-    "        'clf__kernel': ['rbf']}\n",
-    "\n",
+    "param_range = [0.0001, 0.001, 0.01, 0.1, 1.0, 10.0, 100.0, 1000.0]\r\n",
+    "\r\n",
+    "set1 = {'clf__C': param_range,\r\n",
+    "        'clf__kernel': ['linear']}\r\n",
+    "\r\n",
+    "set2 = {'clf__C': param_range,\r\n",
+    "        'clf__gamma': param_range,\r\n",
+    "        'clf__kernel': ['rbf']}\r\n",
+    "\r\n",
     "param_grid = [set1, set2]"
    ],
    "outputs": [],
@@ -114,12 +114,12 @@
    "cell_type": "code",
    "execution_count": 5,
    "source": [
-    "from sklearn.model_selection import GridSearchCV\n",
-    "\n",
-    "gs = GridSearchCV(estimator=pipe_svc, \n",
-    "                  param_grid=param_grid, \n",
-    "                  scoring='accuracy', \n",
-    "                  cv=10,\n",
+    "from sklearn.model_selection import GridSearchCV\r\n",
+    "\r\n",
+    "gs = GridSearchCV(estimator=pipe_svc, \r\n",
+    "                  param_grid=param_grid, \r\n",
+    "                  scoring='accuracy', \r\n",
+    "                  cv=10,\r\n",
     "                  n_jobs=-1)"
    ],
    "outputs": [],
@@ -161,8 +161,8 @@
    "cell_type": "code",
    "execution_count": 7,
    "source": [
-    "# Get parameter names\n",
-    "for k, v in gs.get_params().items():\n",
+    "# Get parameter names\r\n",
+    "for k, v in gs.get_params().items():\r\n",
     "    print(f\"{k:35.35s}: {str(v):35.35}...\")"
    ],
    "outputs": [
@@ -210,12 +210,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "source": [
-    "df = pd.DataFrame(gs.cv_results_)\n",
+    "df = pd.DataFrame(gs.cv_results_)\r\n",
+    "print(df.shape)\r\n",
     "display(df.head())"
    ],
    "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "(72, 21)\n"
+     ]
+    },
     {
      "output_type": "display_data",
      "data": {
@@ -264,10 +272,10 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.010558</td>\n",
-       "      <td>0.000617</td>\n",
-       "      <td>0.001513</td>\n",
-       "      <td>0.000123</td>\n",
+       "      <td>0.009502</td>\n",
+       "      <td>0.000806</td>\n",
+       "      <td>0.0012</td>\n",
+       "      <td>4.000309e-04</td>\n",
        "      <td>0.0001</td>\n",
        "      <td>linear</td>\n",
        "      <td>NaN</td>\n",
@@ -288,10 +296,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.007720</td>\n",
-       "      <td>0.000225</td>\n",
-       "      <td>0.001240</td>\n",
-       "      <td>0.000066</td>\n",
+       "      <td>0.006801</td>\n",
+       "      <td>0.000600</td>\n",
+       "      <td>0.0010</td>\n",
+       "      <td>5.378968e-07</td>\n",
        "      <td>0.001</td>\n",
        "      <td>linear</td>\n",
        "      <td>NaN</td>\n",
@@ -312,10 +320,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.005952</td>\n",
-       "      <td>0.001137</td>\n",
-       "      <td>0.000948</td>\n",
-       "      <td>0.000058</td>\n",
+       "      <td>0.004501</td>\n",
+       "      <td>0.000500</td>\n",
+       "      <td>0.0010</td>\n",
+       "      <td>1.507891e-07</td>\n",
        "      <td>0.01</td>\n",
        "      <td>linear</td>\n",
        "      <td>NaN</td>\n",
@@ -336,10 +344,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.004507</td>\n",
-       "      <td>0.000728</td>\n",
-       "      <td>0.000751</td>\n",
-       "      <td>0.000139</td>\n",
+       "      <td>0.003901</td>\n",
+       "      <td>0.000300</td>\n",
+       "      <td>0.0006</td>\n",
+       "      <td>4.901351e-04</td>\n",
        "      <td>0.1</td>\n",
        "      <td>linear</td>\n",
        "      <td>NaN</td>\n",
@@ -360,10 +368,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.005081</td>\n",
-       "      <td>0.000469</td>\n",
-       "      <td>0.000758</td>\n",
-       "      <td>0.000040</td>\n",
+       "      <td>0.004101</td>\n",
+       "      <td>0.000300</td>\n",
+       "      <td>0.0009</td>\n",
+       "      <td>3.000263e-04</td>\n",
        "      <td>1.0</td>\n",
        "      <td>linear</td>\n",
        "      <td>NaN</td>\n",
@@ -389,11 +397,11 @@
       ],
       "text/plain": [
        "   mean_fit_time  std_fit_time  mean_score_time  std_score_time param_clf__C  \\\n",
-       "0       0.010558      0.000617         0.001513        0.000123       0.0001   \n",
-       "1       0.007720      0.000225         0.001240        0.000066        0.001   \n",
-       "2       0.005952      0.001137         0.000948        0.000058         0.01   \n",
-       "3       0.004507      0.000728         0.000751        0.000139          0.1   \n",
-       "4       0.005081      0.000469         0.000758        0.000040          1.0   \n",
+       "0       0.009502      0.000806           0.0012    4.000309e-04       0.0001   \n",
+       "1       0.006801      0.000600           0.0010    5.378968e-07        0.001   \n",
+       "2       0.004501      0.000500           0.0010    1.507891e-07         0.01   \n",
+       "3       0.003901      0.000300           0.0006    4.901351e-04          0.1   \n",
+       "4       0.004101      0.000300           0.0009    3.000263e-04          1.0   \n",
        "\n",
        "  param_clf__kernel param_clf__gamma  \\\n",
        "0            linear              NaN   \n",
@@ -442,7 +450,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "source": [
-    "df = df.sort_values(by=['rank_test_score'])\n",
+    "df = df.sort_values(by=['rank_test_score'])\r\n",
     "display(df.head())"
    ],
    "outputs": [
@@ -494,10 +502,10 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>49</th>\n",
-       "      <td>0.005285</td>\n",
-       "      <td>0.000120</td>\n",
-       "      <td>0.001108</td>\n",
-       "      <td>0.000069</td>\n",
+       "      <td>0.004201</td>\n",
+       "      <td>0.000600</td>\n",
+       "      <td>0.0011</td>\n",
+       "      <td>3.000738e-04</td>\n",
        "      <td>10.0</td>\n",
        "      <td>rbf</td>\n",
        "      <td>0.001</td>\n",
@@ -518,10 +526,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>56</th>\n",
-       "      <td>0.006642</td>\n",
-       "      <td>0.004251</td>\n",
-       "      <td>0.001042</td>\n",
-       "      <td>0.000054</td>\n",
+       "      <td>0.004601</td>\n",
+       "      <td>0.001200</td>\n",
+       "      <td>0.0010</td>\n",
+       "      <td>3.062542e-07</td>\n",
        "      <td>100.0</td>\n",
        "      <td>rbf</td>\n",
        "      <td>0.0001</td>\n",
@@ -542,10 +550,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50</th>\n",
-       "      <td>0.005334</td>\n",
-       "      <td>0.000638</td>\n",
-       "      <td>0.001065</td>\n",
-       "      <td>0.000359</td>\n",
+       "      <td>0.003701</td>\n",
+       "      <td>0.000458</td>\n",
+       "      <td>0.0009</td>\n",
+       "      <td>3.000738e-04</td>\n",
        "      <td>10.0</td>\n",
        "      <td>rbf</td>\n",
        "      <td>0.01</td>\n",
@@ -566,10 +574,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>0.010350</td>\n",
-       "      <td>0.001780</td>\n",
-       "      <td>0.000748</td>\n",
-       "      <td>0.000066</td>\n",
+       "      <td>0.006101</td>\n",
+       "      <td>0.000944</td>\n",
+       "      <td>0.0005</td>\n",
+       "      <td>5.002261e-04</td>\n",
        "      <td>10.0</td>\n",
        "      <td>linear</td>\n",
        "      <td>NaN</td>\n",
@@ -590,10 +598,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>58</th>\n",
-       "      <td>0.008271</td>\n",
-       "      <td>0.007107</td>\n",
-       "      <td>0.000930</td>\n",
-       "      <td>0.000143</td>\n",
+       "      <td>0.004001</td>\n",
+       "      <td>0.000447</td>\n",
+       "      <td>0.0009</td>\n",
+       "      <td>3.000895e-04</td>\n",
        "      <td>100.0</td>\n",
        "      <td>rbf</td>\n",
        "      <td>0.01</td>\n",
@@ -619,11 +627,11 @@
       ],
       "text/plain": [
        "    mean_fit_time  std_fit_time  mean_score_time  std_score_time param_clf__C  \\\n",
-       "49       0.005285      0.000120         0.001108        0.000069         10.0   \n",
-       "56       0.006642      0.004251         0.001042        0.000054        100.0   \n",
-       "50       0.005334      0.000638         0.001065        0.000359         10.0   \n",
-       "5        0.010350      0.001780         0.000748        0.000066         10.0   \n",
-       "58       0.008271      0.007107         0.000930        0.000143        100.0   \n",
+       "49       0.004201      0.000600           0.0011    3.000738e-04         10.0   \n",
+       "56       0.004601      0.001200           0.0010    3.062542e-07        100.0   \n",
+       "50       0.003701      0.000458           0.0009    3.000738e-04         10.0   \n",
+       "5        0.006101      0.000944           0.0005    5.002261e-04         10.0   \n",
+       "58       0.004001      0.000447           0.0009    3.000895e-04        100.0   \n",
        "\n",
        "   param_clf__kernel param_clf__gamma  \\\n",
        "49               rbf            0.001   \n",
@@ -679,7 +687,7 @@
    "cell_type": "code",
    "execution_count": 10,
    "source": [
-    "print(gs.best_score_)\n",
+    "print(gs.best_score_)\r\n",
     "print(gs.best_params_)"
    ],
    "outputs": [
@@ -695,10 +703,16 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "- Note that grid search already refit the entire training data with the best parameters. You can check this from this setting.\r\n"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "source": [
-    "#Note that grid search already refit the entire training data with the best parameters. You can check this from this setting.\n",
     "gs.refit"
    ],
    "outputs": [
@@ -719,8 +733,8 @@
    "cell_type": "code",
    "execution_count": 12,
    "source": [
-    "y_pred = gs.predict(X_test)\n",
-    "testing_accuracy = gs.score(X_test,y_test)\n",
+    "y_pred = gs.predict(X_test)\r\n",
+    "testing_accuracy = gs.score(X_test,y_test)\r\n",
     "print(f\"Testing accuracy: {testing_accuracy:6.3f}\")"
    ],
    "outputs": [
@@ -738,10 +752,10 @@
    "cell_type": "code",
    "execution_count": 13,
    "source": [
-    "# To do this manually\n",
-    "clf = gs.best_estimator_\n",
-    "clf.fit(X_train, y_train)\n",
-    "testing_accuracy = clf.score(X_test,y_test)\n",
+    "# To do this manually\r\n",
+    "clf = gs.best_estimator_\r\n",
+    "clf.fit(X_train, y_train)\r\n",
+    "testing_accuracy = clf.score(X_test,y_test)\r\n",
     "print(f\"Testing accuracy: {testing_accuracy:6.3f}\")"
    ],
    "outputs": [
@@ -753,13 +767,6 @@
      ]
     }
    ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
    "metadata": {}
   }
  ],
@@ -781,7 +788,7 @@
    "version": "3.8.8"
   },
   "interpreter": {
-   "hash": "44cfd549216d83088fe60783a751b73ec1b18bc6a03494afd4c2d311310c0619"
+   "hash": "be725e0de8fb3f5fda9b0118bdf797fa9814e28e467c1cce77c5b9910d8a1786"
   }
  },
  "nbformat": 4,
