--- a/Topic 05 - Model Tuning/C12 - CV.ipynb
+++ b/Topic 05 - Model Tuning/C12 - CV.ipynb
@@ -18,31 +18,31 @@
    "cell_type": "code",
    "execution_count": 1,
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.decomposition import PCA\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "\n",
-    "# Breast cancer data\n",
-    "from sklearn.datasets import load_breast_cancer\n",
-    "\n",
-    "# Load data\n",
-    "dataObj = load_breast_cancer()\n",
-    "X = dataObj.data\n",
-    "y = dataObj.target\n",
-    "\n",
-    "# Splitting data\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y,\n",
-    "    test_size=0.20,\n",
-    "    stratify=y,\n",
-    "    random_state=1)\n",
-    "\n",
-    "# Constructing a pipeline object\n",
-    "pipe_lr = Pipeline([('scl', StandardScaler()),\n",
-    "                    ('pca', PCA(n_components=2)),\n",
+    "import pandas as pd\r\n",
+    "import numpy as np\r\n",
+    "from sklearn.model_selection import train_test_split\r\n",
+    "from sklearn.preprocessing import StandardScaler\r\n",
+    "from sklearn.decomposition import PCA\r\n",
+    "from sklearn.linear_model import LogisticRegression\r\n",
+    "from sklearn.pipeline import Pipeline\r\n",
+    "\r\n",
+    "# Breast cancer data\r\n",
+    "from sklearn.datasets import load_breast_cancer\r\n",
+    "\r\n",
+    "# Load data\r\n",
+    "dataObj = load_breast_cancer()\r\n",
+    "X = dataObj.data\r\n",
+    "y = dataObj.target\r\n",
+    "\r\n",
+    "# Splitting data\r\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y,\r\n",
+    "    test_size=0.20,\r\n",
+    "    stratify=y,\r\n",
+    "    random_state=1)\r\n",
+    "\r\n",
+    "# Constructing a pipeline object\r\n",
+    "pipe_lr = Pipeline([('scl', StandardScaler()),\r\n",
+    "                    ('pca', PCA(n_components=2)),\r\n",
     "                    ('clf', LogisticRegression(random_state=1))])"
    ],
    "outputs": [],
@@ -59,8 +59,8 @@
    "cell_type": "code",
    "execution_count": 17,
    "source": [
-    "from sklearn.model_selection import KFold\n",
-    "kf = KFold(n_splits=10)\n",
+    "from sklearn.model_selection import KFold\r\n",
+    "kf = KFold(n_splits=10)\r\n",
     "print(kf)"
    ],
    "outputs": [
@@ -78,7 +78,7 @@
    "cell_type": "code",
    "execution_count": 18,
    "source": [
-    "genSplit = kf.split(X_train,y_train)\n",
+    "genSplit = kf.split(X_train,y_train)\r\n",
     "print(genSplit)"
    ],
    "outputs": [
@@ -96,10 +96,10 @@
    "cell_type": "code",
    "execution_count": 19,
    "source": [
-    "#Note that generator needs to be created since it is exhausted after used.\n",
-    "genSplit = kf.split(X_train,y_train)\n",
-    "\n",
-    "for idxTrain, idxVal in genSplit:\n",
+    "#Note that generator needs to be created since it is exhausted after used.\r\n",
+    "genSplit = kf.split(X_train,y_train)\r\n",
+    "\r\n",
+    "for idxTrain, idxVal in genSplit:\r\n",
     "    print(idxTrain[0:10],\"...\", idxVal[0:10], \"...\") "
    ],
    "outputs": [
@@ -126,9 +126,9 @@
    "cell_type": "code",
    "execution_count": 20,
    "source": [
-    "genSplit = kf.split(X_train,y_train)\n",
-    "\n",
-    "for idxTrain, idxVal in genSplit:\n",
+    "genSplit = kf.split(X_train,y_train)\r\n",
+    "\r\n",
+    "for idxTrain, idxVal in genSplit:\r\n",
     "    print(idxTrain.shape, idxVal.shape, np.bincount(y_train[idxTrain])) "
    ],
    "outputs": [
@@ -155,28 +155,28 @@
    "cell_type": "code",
    "execution_count": 21,
    "source": [
-    "genSplit = kf.split(X_train,y_train)\n",
-    "\n",
-    "trainScores = []\n",
-    "valScores = []\n",
-    "for count, (idxTrain, idxVal) in enumerate(genSplit):\n",
-    "    # Training\n",
-    "    pipe_lr.fit(X_train[idxTrain], y_train[idxTrain])\n",
-    "    # Traning score\n",
-    "    trainScore = pipe_lr.score(X_train[idxTrain], y_train[idxTrain])\n",
-    "    trainScores.append(trainScore)\n",
-    "    # Validation score\n",
-    "    valScore = pipe_lr.score(X_train[idxVal], y_train[idxVal])\n",
-    "    valScores.append(valScore)\n",
-    "    # Printing\n",
-    "    print(f\"Fold:{count+1:2d}, Training accuracy:{trainScore:6.3f}, Validation accuracy:{valScore:6.3f}\")\n",
-    "\n",
-    "print(\"\\nTraining accuracy\")  \n",
-    "print(f\"Mean:{np.mean(trainScores):6.3f}\")\n",
-    "print(f\"Std:{np.std(trainScores):6.3f}\")\n",
-    "\n",
-    "print(\"\\nCrossed-validation accuracy\")  \n",
-    "print(f\"Mean:{np.mean(valScores):6.3f}\")\n",
+    "genSplit = kf.split(X_train,y_train)\r\n",
+    "\r\n",
+    "trainScores = []\r\n",
+    "valScores = []\r\n",
+    "for count, (idxTrain, idxVal) in enumerate(genSplit):\r\n",
+    "    # Training\r\n",
+    "    pipe_lr.fit(X_train[idxTrain], y_train[idxTrain])\r\n",
+    "    # Traning score\r\n",
+    "    trainScore = pipe_lr.score(X_train[idxTrain], y_train[idxTrain])\r\n",
+    "    trainScores.append(trainScore)\r\n",
+    "    # Validation score\r\n",
+    "    valScore = pipe_lr.score(X_train[idxVal], y_train[idxVal])\r\n",
+    "    valScores.append(valScore)\r\n",
+    "    # Printing\r\n",
+    "    print(f\"Fold:{count+1:2d}, Training accuracy:{trainScore:6.3f}, Validation accuracy:{valScore:6.3f}\")\r\n",
+    "\r\n",
+    "print(\"\\nTraining accuracy\")  \r\n",
+    "print(f\"Mean:{np.mean(trainScores):6.3f}\")\r\n",
+    "print(f\"Std:{np.std(trainScores):6.3f}\")\r\n",
+    "\r\n",
+    "print(\"\\nCrossed-validation accuracy\")  \r\n",
+    "print(f\"Mean:{np.mean(valScores):6.3f}\")\r\n",
     "print(f\"Std:{np.std(valScores):6.3f}\")"
    ],
    "outputs": [
@@ -218,8 +218,8 @@
    "cell_type": "code",
    "execution_count": 22,
    "source": [
-    "from sklearn.model_selection import StratifiedKFold\n",
-    "skf = StratifiedKFold(n_splits=10)\n",
+    "from sklearn.model_selection import StratifiedKFold\r\n",
+    "skf = StratifiedKFold(n_splits=10)\r\n",
     "print(skf)"
    ],
    "outputs": [
@@ -237,9 +237,9 @@
    "cell_type": "code",
    "execution_count": 23,
    "source": [
-    "genSplit = skf.split(X_train,y_train)\n",
-    "\n",
-    "for idxTrain, idxVal in genSplit:\n",
+    "genSplit = skf.split(X_train,y_train)\r\n",
+    "\r\n",
+    "for idxTrain, idxVal in genSplit:\r\n",
     "    print(idxTrain.shape, idxVal.shape, np.bincount(y_train[idxTrain])) "
    ],
    "outputs": [
@@ -266,28 +266,28 @@
    "cell_type": "code",
    "execution_count": 24,
    "source": [
-    "genSplit = skf.split(X_train,y_train)\n",
-    "\n",
-    "trainScores = []\n",
-    "valScores = []\n",
-    "for count, (idxTrain, idxVal) in enumerate(genSplit):\n",
-    "    # Training\n",
-    "    pipe_lr.fit(X_train[idxTrain], y_train[idxTrain])\n",
-    "    # Traning score\n",
-    "    trainScore = pipe_lr.score(X_train[idxTrain], y_train[idxTrain])\n",
-    "    trainScores.append(trainScore)\n",
-    "    # Validation score\n",
-    "    valScore = pipe_lr.score(X_train[idxVal], y_train[idxVal])\n",
-    "    valScores.append(valScore)\n",
-    "    # Printing\n",
-    "    print(f\"Fold:{count+1:2d}, Training accuracy:{trainScore:6.3f}, Validation accuracy:{valScore:6.3f}\")\n",
-    "\n",
-    "print(\"\\nTraining accuracy\")  \n",
-    "print(f\"Mean:{np.mean(trainScores):6.3f}\")\n",
-    "print(f\"Std:{np.std(trainScores):6.3f}\")\n",
-    "\n",
-    "print(\"\\nCrossed-validation accuracy\")  \n",
-    "print(f\"Mean:{np.mean(valScores):6.3f}\")\n",
+    "genSplit = skf.split(X_train,y_train)\r\n",
+    "\r\n",
+    "trainScores = []\r\n",
+    "valScores = []\r\n",
+    "for count, (idxTrain, idxVal) in enumerate(genSplit):\r\n",
+    "    # Training\r\n",
+    "    pipe_lr.fit(X_train[idxTrain], y_train[idxTrain])\r\n",
+    "    # Traning score\r\n",
+    "    trainScore = pipe_lr.score(X_train[idxTrain], y_train[idxTrain])\r\n",
+    "    trainScores.append(trainScore)\r\n",
+    "    # Validation score\r\n",
+    "    valScore = pipe_lr.score(X_train[idxVal], y_train[idxVal])\r\n",
+    "    valScores.append(valScore)\r\n",
+    "    # Printing\r\n",
+    "    print(f\"Fold:{count+1:2d}, Training accuracy:{trainScore:6.3f}, Validation accuracy:{valScore:6.3f}\")\r\n",
+    "\r\n",
+    "print(\"\\nTraining accuracy\")  \r\n",
+    "print(f\"Mean:{np.mean(trainScores):6.3f}\")\r\n",
+    "print(f\"Std:{np.std(trainScores):6.3f}\")\r\n",
+    "\r\n",
+    "print(\"\\nCrossed-validation accuracy\")  \r\n",
+    "print(f\"Mean:{np.mean(valScores):6.3f}\")\r\n",
     "print(f\"Std:{np.std(valScores):6.3f}\")"
    ],
    "outputs": [
@@ -329,23 +329,23 @@
    "cell_type": "code",
    "execution_count": 56,
    "source": [
-    "from sklearn.model_selection import cross_validate\n",
-    "\n",
-    "scores = cross_validate(estimator=pipe_lr,\n",
-    "                         X=X_train,\n",
-    "                         y=y_train,\n",
-    "                         cv=10,\n",
-    "                         scoring=['accuracy','f1'],\n",
-    "                         n_jobs=-1)\n",
-    "\n",
-    "print(\"\\nCrossed-validation\")  \n",
-    "for k, v in scores.items():\n",
-    "    arrayPrint =   ', '.join([f'{el:3.2f}' for el in v])\n",
-    "    print(f\"{k:15s}:\", arrayPrint)\n",
-    "\n",
-    "print(\"\\nCrossed-validation accuracy\")  \n",
-    "print(f\"Mean:{np.mean(scores['test_accuracy']):6.3f}\")\n",
-    "print(f\"Std:{np.std(scores['test_accuracy']):6.3f}\")\n"
+    "from sklearn.model_selection import cross_validate\r\n",
+    "\r\n",
+    "scores = cross_validate(estimator=pipe_lr,\r\n",
+    "                         X=X_train,\r\n",
+    "                         y=y_train,\r\n",
+    "                         cv=10,\r\n",
+    "                         scoring=['accuracy','f1'],\r\n",
+    "                         n_jobs=-1)\r\n",
+    "\r\n",
+    "print(\"\\nCrossed-validation\")  \r\n",
+    "for k, v in scores.items():\r\n",
+    "    arrayPrint =   ', '.join([f'{el:3.2f}' for el in v])\r\n",
+    "    print(f\"{k:15s}:\", arrayPrint)\r\n",
+    "\r\n",
+    "print(\"\\nCrossed-validation accuracy\")  \r\n",
+    "print(f\"Mean:{np.mean(scores['test_accuracy']):6.3f}\")\r\n",
+    "print(f\"Std:{np.std(scores['test_accuracy']):6.3f}\")\r\n"
    ],
    "outputs": [
     {
@@ -371,19 +371,19 @@
    "cell_type": "code",
    "execution_count": 61,
    "source": [
-    "from sklearn.model_selection import cross_val_score\n",
-    "scores = cross_val_score(estimator=pipe_lr,\n",
-    "                         X=X_train,\n",
-    "                         y=y_train,\n",
-    "                         cv=10,\n",
-    "                         n_jobs=1)\n",
-    "\n",
-    "\n",
-    "arrayPrint =   ', '.join([f'{el:3.2f}' for el in scores])\n",
-    "print(f\"Score:\", arrayPrint)\n",
-    "\n",
-    "print(\"\\nCrossed-validation accuracy\")  \n",
-    "print(f\"Mean:{np.mean(scores):6.3f}\")\n",
+    "from sklearn.model_selection import cross_val_score\r\n",
+    "scores = cross_val_score(estimator=pipe_lr,\r\n",
+    "                         X=X_train,\r\n",
+    "                         y=y_train,\r\n",
+    "                         cv=10,\r\n",
+    "                         n_jobs=1)\r\n",
+    "\r\n",
+    "\r\n",
+    "arrayPrint =   ', '.join([f'{el:3.2f}' for el in scores])\r\n",
+    "print(f\"Score:\", arrayPrint)\r\n",
+    "\r\n",
+    "print(\"\\nCrossed-validation accuracy\")  \r\n",
+    "print(f\"Mean:{np.mean(scores):6.3f}\")\r\n",
     "print(f\"Std:{np.std(scores):6.3f}\")"
    ],
    "outputs": [
@@ -420,7 +420,7 @@
    "version": "3.8.8"
   },
   "interpreter": {
-   "hash": "44cfd549216d83088fe60783a751b73ec1b18bc6a03494afd4c2d311310c0619"
+   "hash": "be725e0de8fb3f5fda9b0118bdf797fa9814e28e467c1cce77c5b9910d8a1786"
   }
  },
  "nbformat": 4,
