--- a/Topic 05 - Model Tuning/C11 - Pipeline.ipynb
+++ b/Topic 05 - Model Tuning/C11 - Pipeline.ipynb
@@ -23,28 +23,28 @@
    "cell_type": "code",
    "execution_count": 1,
    "source": [
-    "import pandas as pd\r\n",
-    "import numpy as np\r\n",
-    "\r\n",
-    "#Loading the Breast Cancer Wisconsin dataset\r\n",
-    "from sklearn.datasets import load_breast_cancer\r\n",
-    "\r\n",
-    "# Load data\r\n",
-    "dataObj = load_breast_cancer()\r\n",
-    "X = dataObj.data\r\n",
-    "y = dataObj.target\r\n",
-    "\r\n",
-    "# Create DataFrame with features\r\n",
-    "df = pd.DataFrame(X)\r\n",
-    "df.columns = dataObj.feature_names\r\n",
-    "\r\n",
-    "# Add class column\r\n",
-    "df.insert(loc=0, column=\"Class\", value=y)\r\n",
-    "\r\n",
-    "# Explore data\r\n",
-    "display(df.head())\r\n",
-    "print(df.shape)\r\n",
-    "display(df.describe())\r\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "#Loading the Breast Cancer Wisconsin dataset\n",
+    "from sklearn.datasets import load_breast_cancer\n",
+    "\n",
+    "# Load data\n",
+    "dataObj = load_breast_cancer()\n",
+    "X = dataObj.data\n",
+    "y = dataObj.target\n",
+    "\n",
+    "# Create DataFrame with features\n",
+    "df = pd.DataFrame(X)\n",
+    "df.columns = dataObj.feature_names\n",
+    "\n",
+    "# Add class column\n",
+    "df.insert(loc=0, column=\"Class\", value=y)\n",
+    "\n",
+    "# Explore data\n",
+    "display(df.head())\n",
+    "print(df.shape)\n",
+    "display(df.describe())\n",
     "print(df['Class'].value_counts())"
    ],
    "outputs": [
@@ -582,12 +582,12 @@
    "cell_type": "code",
    "execution_count": 2,
    "source": [
-    "from sklearn.model_selection import train_test_split\r\n",
-    "\r\n",
-    "# Splitting data\r\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y,\r\n",
-    "    test_size=0.20,\r\n",
-    "    stratify=y,\r\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# Splitting data\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y,\n",
+    "    test_size=0.30,\n",
+    "    stratify=y,\n",
     "    random_state=1)"
    ],
    "outputs": [],
@@ -604,38 +604,38 @@
    "cell_type": "code",
    "execution_count": 3,
    "source": [
-    "from sklearn.preprocessing import StandardScaler\r\n",
-    "from sklearn.decomposition import PCA\r\n",
-    "from sklearn.linear_model import LogisticRegression\r\n",
-    "\r\n",
-    "# Standardize\r\n",
-    "sc = StandardScaler()\r\n",
-    "X_train_std = sc.fit_transform(X_train)\r\n",
-    "X_test_std = sc.transform(X_test)\r\n",
-    "\r\n",
-    "# PCA\r\n",
-    "pca = PCA(n_components=2)\r\n",
-    "X_train_pca = pca.fit_transform(X_train_std)\r\n",
-    "X_test_pca = pca.transform(X_test_std)\r\n",
-    "\r\n",
-    "# Logistic Regression\r\n",
-    "lr = LogisticRegression(random_state=1)\r\n",
-    "lr.fit(X_train_pca, y_train)\r\n",
-    "\r\n",
-    "# Making prediction from trianing data\r\n",
-    "y_pred = lr.predict(X_train_pca)\r\n",
-    "print(y_pred)\r\n",
-    "\r\n",
-    "# Making prediction from testing data\r\n",
-    "y_pred = lr.predict(X_test_pca)\r\n",
-    "print(y_pred)\r\n",
-    "\r\n",
-    "# Training accuracy\r\n",
-    "training_accuracy = lr.score(X_train_pca, y_train)\r\n",
-    "print(f\"Training Accuracy:{training_accuracy:6.3f}\")\r\n",
-    "\r\n",
-    "# Testing accuracy\r\n",
-    "testing_accuracy = lr.score(X_test_pca, y_test)\r\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "# Standardize\n",
+    "sc = StandardScaler()\n",
+    "X_train_std = sc.fit_transform(X_train)\n",
+    "X_test_std = sc.transform(X_test)\n",
+    "\n",
+    "# PCA\n",
+    "pca = PCA(n_components=2)\n",
+    "X_train_pca = pca.fit_transform(X_train_std)\n",
+    "X_test_pca = pca.transform(X_test_std)\n",
+    "\n",
+    "# Logistic Regression\n",
+    "lr = LogisticRegression(random_state=1)\n",
+    "lr.fit(X_train_pca, y_train)\n",
+    "\n",
+    "# Making prediction from trianing data\n",
+    "y_pred = lr.predict(X_train_pca)\n",
+    "print(y_pred)\n",
+    "\n",
+    "# Making prediction from testing data\n",
+    "y_pred = lr.predict(X_test_pca)\n",
+    "print(y_pred)\n",
+    "\n",
+    "# Training accuracy\n",
+    "training_accuracy = lr.score(X_train_pca, y_train)\n",
+    "print(f\"Training Accuracy:{training_accuracy:6.3f}\")\n",
+    "\n",
+    "# Testing accuracy\n",
+    "testing_accuracy = lr.score(X_test_pca, y_test)\n",
     "print(f\"Testing Accuracy:{testing_accuracy:6.3f}\")"
    ],
    "outputs": [
@@ -643,25 +643,24 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "[0 0 0 0 1 0 1 1 1 1 0 1 1 1 0 1 1 1 1 1 1 0 0 1 1 1 0 1 1 1 0 0 0 1 1 1 0\n",
-      " 1 0 1 1 0 1 0 1 0 0 0 1 1 1 1 0 0 1 0 1 1 0 0 0 1 0 0 1 1 0 0 1 0 1 0 0 1\n",
-      " 1 0 0 1 1 1 0 0 0 1 0 0 1 1 0 0 0 1 1 0 1 0 1 1 0 0 1 1 1 1 0 0 1 0 1 1 0\n",
-      " 1 1 1 1 1 1 1 0 1 1 0 1 1 1 0 1 1 1 1 1 1 0 0 1 1 1 1 1 1 0 1 1 0 1 1 1 1\n",
-      " 0 1 1 1 0 0 1 1 0 1 1 0 1 0 1 0 1 0 1 1 1 1 1 1 0 0 1 1 1 0 1 1 1 1 0 0 1\n",
-      " 1 1 1 1 0 1 0 1 0 0 1 0 0 0 1 0 1 1 0 0 1 1 0 1 1 0 1 1 1 0 1 1 0 1 1 1 1\n",
-      " 1 1 1 1 1 0 1 0 0 0 1 1 1 1 1 1 1 0 0 1 0 1 1 1 1 1 1 1 0 0 0 1 1 1 1 0 1\n",
-      " 0 1 1 1 1 0 1 1 1 1 0 1 0 1 1 0 1 1 0 1 0 1 1 1 1 1 0 1 1 0 0 0 1 1 0 1 1\n",
-      " 1 1 1 1 0 0 1 0 1 0 1 0 1 1 0 1 1 1 0 0 1 0 1 1 0 1 1 1 1 1 1 1 1 1 0 1 0\n",
-      " 1 1 1 0 0 1 1 0 1 1 0 0 1 1 0 1 1 1 0 1 1 1 1 0 1 0 1 1 1 0 1 1 0 1 1 1 0\n",
-      " 1 0 1 1 1 0 1 1 0 0 1 1 0 1 0 0 1 0 1 1 0 1 1 1 0 1 0 1 1 0 1 1 1 1 0 0 1\n",
-      " 0 1 1 1 1 0 0 1 1 0 1 0 1 0 1 0 0 1 1 0 1 1 0 1 1 1 0 0 0 1 0 1 1 1 1 0 1\n",
-      " 1 1 1 0 0 0 0 1 1 1 0]\n",
-      "[1 0 1 1 0 1 1 1 0 1 0 1 1 0 1 1 1 0 1 0 1 0 1 1 1 0 0 1 0 0 0 0 0 0 1 0 1\n",
-      " 0 0 1 1 1 0 0 0 0 0 1 1 1 1 1 1 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1 0 1 0 1 1 1\n",
-      " 1 1 0 1 1 1 0 1 1 0 1 1 1 0 1 1 0 0 1 1 1 1 0 1 0 1 1 0 1 1 0 1 1 0 1 1 0\n",
-      " 0 0 1]\n",
-      "Training Accuracy: 0.956\n",
-      "Testing Accuracy: 0.956\n"
+      "[1 1 1 1 1 1 0 1 1 0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 0 1 1 0 0 1 0 1 1 1 1 1 1\n",
+      " 0 1 1 0 1 0 1 1 1 0 1 0 1 1 1 1 1 1 1 1 0 1 1 1 0 1 1 1 0 1 1 0 1 1 0 1 1\n",
+      " 1 1 1 0 1 1 1 0 1 0 1 1 0 0 0 1 1 0 1 1 1 1 1 0 0 0 1 0 1 0 1 1 0 1 1 0 0\n",
+      " 1 1 0 1 1 1 1 0 1 1 1 0 0 1 0 1 0 0 0 1 0 1 1 0 1 1 1 0 0 1 1 0 1 1 1 0 0\n",
+      " 1 1 0 1 0 0 0 1 0 1 1 0 0 1 1 1 1 0 1 1 0 0 0 1 1 1 1 1 1 0 1 0 1 1 1 1 1\n",
+      " 1 0 0 1 0 1 0 0 0 1 1 1 1 1 0 0 0 0 1 1 1 1 0 0 0 1 1 1 1 0 1 1 1 1 0 0 1\n",
+      " 0 0 0 1 1 1 1 1 1 0 0 0 1 1 0 1 1 1 0 0 1 1 1 1 0 1 1 1 1 1 0 1 1 1 1 0 0\n",
+      " 1 0 1 1 1 1 0 0 1 0 1 0 1 0 1 1 0 1 1 1 0 1 0 1 1 0 1 1 1 1 1 1 1 0 1 0 1\n",
+      " 1 1 0 0 1 1 1 1 0 0 1 1 0 1 1 0 1 1 0 1 1 1 1 0 1 0 1 1 0 1 0 1 1 0 1 1 0\n",
+      " 1 1 1 1 1 0 0 1 0 1 1 1 1 1 0 0 1 0 1 1 0 1 1 0 1 1 1 1 0 0 1 1 0 1 1 0 1\n",
+      " 0 0 1 1 0 1 1 0 1 0 1 0 1 0 1 1 1 1 0 1 1 1 0 0 0 1 1 0]\n",
+      "[0 1 1 0 0 0 1 0 1 0 0 0 1 1 1 1 0 1 0 0 1 1 1 1 0 1 0 1 1 1 0 0 0 0 1 1 1\n",
+      " 1 0 1 0 1 1 1 1 1 0 1 0 1 1 1 0 1 1 1 1 0 1 1 1 1 1 1 0 0 0 1 1 1 1 0 0 1\n",
+      " 0 1 1 1 1 1 1 0 1 0 0 1 0 1 1 0 1 1 0 1 0 1 1 1 1 1 0 1 1 1 1 0 1 0 0 1 1\n",
+      " 1 1 0 0 0 1 0 0 1 0 1 1 1 1 1 0 1 1 0 0 1 0 1 1 0 1 1 0 0 0 0 1 1 0 1 1 1\n",
+      " 1 0 1 0 1 1 0 1 1 0 1 1 1 0 0 1 0 0 1 0 1 0 0]\n",
+      "Training Accuracy: 0.960\n",
+      "Testing Accuracy: 0.947\n"
      ]
     }
    ],
@@ -678,29 +677,29 @@
    "cell_type": "code",
    "execution_count": 4,
    "source": [
-    "from sklearn.preprocessing import StandardScaler\r\n",
-    "from sklearn.decomposition import PCA\r\n",
-    "from sklearn.linear_model import LogisticRegression\r\n",
-    "from sklearn.pipeline import Pipeline\r\n",
-    "\r\n",
-    "# Construct pipeline object\r\n",
-    "pipe_lr = Pipeline([('scl', StandardScaler()),\r\n",
-    "                    ('pca', PCA(n_components=2)),\r\n",
-    "                    ('clf', LogisticRegression(random_state=1))])\r\n",
-    "\r\n",
-    "# Training\r\n",
-    "pipe_lr.fit(X_train, y_train)\r\n",
-    "\r\n",
-    "# Making prediction from testing data\r\n",
-    "y_pred = pipe_lr.predict(X_test)\r\n",
-    "print(y_pred)\r\n",
-    "\r\n",
-    "# Training accuracy\r\n",
-    "training_accuracy = pipe_lr.score(X_train, y_train)\r\n",
-    "print(f\"Training Accuracy:{training_accuracy:6.3f}\")\r\n",
-    "\r\n",
-    "# Testing accuracy\r\n",
-    "testing_accuracy = pipe_lr.score(X_test, y_test)\r\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "\n",
+    "# Construct pipeline object\n",
+    "pipe_lr = Pipeline([('scl', StandardScaler()),\n",
+    "                    ('pca', PCA(n_components=2)),\n",
+    "                    ('clf', LogisticRegression(random_state=1))])\n",
+    "\n",
+    "# Training\n",
+    "pipe_lr.fit(X_train, y_train)\n",
+    "\n",
+    "# Making prediction from testing data\n",
+    "y_pred = pipe_lr.predict(X_test)\n",
+    "print(y_pred)\n",
+    "\n",
+    "# Training accuracy\n",
+    "training_accuracy = pipe_lr.score(X_train, y_train)\n",
+    "print(f\"Training Accuracy:{training_accuracy:6.3f}\")\n",
+    "\n",
+    "# Testing accuracy\n",
+    "testing_accuracy = pipe_lr.score(X_test, y_test)\n",
     "print(f\"Testing Accuracy:{testing_accuracy:6.3f}\")"
    ],
    "outputs": [
@@ -708,12 +707,13 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "[1 0 1 1 0 1 1 1 0 1 0 1 1 0 1 1 1 0 1 0 1 0 1 1 1 0 0 1 0 0 0 0 0 0 1 0 1\n",
-      " 0 0 1 1 1 0 0 0 0 0 1 1 1 1 1 1 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1 0 1 0 1 1 1\n",
-      " 1 1 0 1 1 1 0 1 1 0 1 1 1 0 1 1 0 0 1 1 1 1 0 1 0 1 1 0 1 1 0 1 1 0 1 1 0\n",
-      " 0 0 1]\n",
-      "Training Accuracy: 0.956\n",
-      "Testing Accuracy: 0.956\n"
+      "[0 1 1 0 0 0 1 0 1 0 0 0 1 1 1 1 0 1 0 0 1 1 1 1 0 1 0 1 1 1 0 0 0 0 1 1 1\n",
+      " 1 0 1 0 1 1 1 1 1 0 1 0 1 1 1 0 1 1 1 1 0 1 1 1 1 1 1 0 0 0 1 1 1 1 0 0 1\n",
+      " 0 1 1 1 1 1 1 0 1 0 0 1 0 1 1 0 1 1 0 1 0 1 1 1 1 1 0 1 1 1 1 0 1 0 0 1 1\n",
+      " 1 1 0 0 0 1 0 0 1 0 1 1 1 1 1 0 1 1 0 0 1 0 1 1 0 1 1 0 0 0 0 1 1 0 1 1 1\n",
+      " 1 0 1 0 1 1 0 1 1 0 1 1 1 0 0 1 0 0 1 0 1 0 0]\n",
+      "Training Accuracy: 0.960\n",
+      "Testing Accuracy: 0.947\n"
      ]
     }
    ],
@@ -723,8 +723,8 @@
    "cell_type": "code",
    "execution_count": 5,
    "source": [
-    "# Get parameter names\r\n",
-    "for k, v in pipe_lr.get_params().items():\r\n",
+    "# Get parameter names\n",
+    "for k, v in pipe_lr.get_params().items():\n",
     "    print(f\"{k:25.25s}: {str(v)}\")"
    ],
    "outputs": [
@@ -787,7 +787,7 @@
    "version": "3.8.8"
   },
   "interpreter": {
-   "hash": "be725e0de8fb3f5fda9b0118bdf797fa9814e28e467c1cce77c5b9910d8a1786"
+   "hash": "44cfd549216d83088fe60783a751b73ec1b18bc6a03494afd4c2d311310c0619"
   }
  },
  "nbformat": 4,
