--- a/Topic 05 - Model Tuning/C21 - Learning Curve.ipynb
+++ b/Topic 05 - Model Tuning/C21 - Learning Curve.ipynb
@@ -18,33 +18,33 @@
    "cell_type": "code",
    "execution_count": 19,
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from sklearn.datasets import load_breast_cancer\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.decomposition import PCA\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "\n",
-    "# Load data\n",
-    "dataObj = load_breast_cancer()\n",
-    "X = dataObj.data\n",
-    "y = dataObj.target\n",
-    "\n",
-    "# Splitting data\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, \n",
-    "    stratify=y,\n",
-    "    test_size=0.30,\n",
-    "    random_state=1)\n",
-    "\n",
-    "# Constructing a pipeline object (without PCA)\n",
-    "pipe_lr = Pipeline([('scl', StandardScaler()),\n",
-    "                    ('clf', LogisticRegression(random_state=1, max_iter=10000))])\n",
-    "\n",
-    "# Constructing a pipeline object (with PCA)\n",
-    "#pipe_lr = Pipeline([('scl', StandardScaler()),\n",
-    "#                    ('pca', PCA(n_components=2)),\n",
+    "import pandas as pd\r\n",
+    "import numpy as np\r\n",
+    "from sklearn.datasets import load_breast_cancer\r\n",
+    "from sklearn.model_selection import train_test_split\r\n",
+    "from sklearn.preprocessing import StandardScaler\r\n",
+    "from sklearn.decomposition import PCA\r\n",
+    "from sklearn.linear_model import LogisticRegression\r\n",
+    "from sklearn.pipeline import Pipeline\r\n",
+    "\r\n",
+    "# Load data\r\n",
+    "dataObj = load_breast_cancer()\r\n",
+    "X = dataObj.data\r\n",
+    "y = dataObj.target\r\n",
+    "\r\n",
+    "# Splitting data\r\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, \r\n",
+    "    stratify=y,\r\n",
+    "    test_size=0.30,\r\n",
+    "    random_state=1)\r\n",
+    "\r\n",
+    "# Constructing a pipeline object (without PCA)\r\n",
+    "pipe_lr = Pipeline([('scl', StandardScaler()),\r\n",
+    "                    ('clf', LogisticRegression(random_state=1, max_iter=10000))])\r\n",
+    "\r\n",
+    "# Constructing a pipeline object (with PCA)\r\n",
+    "#pipe_lr = Pipeline([('scl', StandardScaler()),\r\n",
+    "#                    ('pca', PCA(n_components=2)),\r\n",
     "#                    ('clf', LogisticRegression(random_state=1, max_iter=10000))])"
    ],
    "outputs": [],
@@ -54,8 +54,8 @@
    "cell_type": "code",
    "execution_count": 20,
    "source": [
-    "# Different percentage of data used to construct a learning curve\n",
-    "train_size = np.linspace(0.1, 1.0, 10)\n",
+    "# Different percentage of data used to construct a learning curve\r\n",
+    "train_size = np.linspace(0.1, 1.0, 10)\r\n",
     "print(train_size)"
    ],
    "outputs": [
@@ -73,14 +73,14 @@
    "cell_type": "code",
    "execution_count": 21,
    "source": [
-    "from sklearn.model_selection import learning_curve\n",
-    "\n",
-    "train_sizes, train_scores, val_scores =\\\n",
-    "                learning_curve(estimator=pipe_lr,\n",
-    "                               X=X_train,\n",
-    "                               y=y_train,\n",
-    "                               train_sizes=train_size,\n",
-    "                               cv=10,\n",
+    "from sklearn.model_selection import learning_curve\r\n",
+    "\r\n",
+    "train_sizes, train_scores, val_scores =\\\r\n",
+    "                learning_curve(estimator=pipe_lr,\r\n",
+    "                               X=X_train,\r\n",
+    "                               y=y_train,\r\n",
+    "                               train_sizes=train_size,\r\n",
+    "                               cv=10,\r\n",
     "                               n_jobs=1)"
    ],
    "outputs": [],
@@ -90,7 +90,7 @@
    "cell_type": "code",
    "execution_count": 22,
    "source": [
-    "# Number of training samples\n",
+    "# Number of training samples\r\n",
     "print(train_sizes)"
    ],
    "outputs": [
@@ -108,10 +108,10 @@
    "cell_type": "code",
    "execution_count": 23,
    "source": [
-    "# Training accuracy\n",
-    "df = pd.DataFrame(train_scores)\n",
-    "df.insert(loc=0, column=\"n_samples\", value=train_sizes)\n",
-    "df = df.set_index(\"n_samples\")\n",
+    "# Training accuracy\r\n",
+    "df = pd.DataFrame(train_scores)\r\n",
+    "df.insert(loc=0, column=\"n_samples\", value=train_sizes)\r\n",
+    "df = df.set_index(\"n_samples\")\r\n",
     "display(df)"
    ],
    "outputs": [
@@ -334,10 +334,10 @@
    "cell_type": "code",
    "execution_count": 24,
    "source": [
-    "# Validation accuracy\n",
-    "df = pd.DataFrame(val_scores)\n",
-    "df.insert(loc=0, column=\"n_samples\", value=train_sizes)\n",
-    "df = df.set_index(\"n_samples\")\n",
+    "# Validation accuracy\r\n",
+    "df = pd.DataFrame(val_scores)\r\n",
+    "df.insert(loc=0, column=\"n_samples\", value=train_sizes)\r\n",
+    "df = df.set_index(\"n_samples\")\r\n",
     "display(df)"
    ],
    "outputs": [
@@ -560,9 +560,9 @@
    "cell_type": "code",
    "execution_count": 25,
    "source": [
-    "train_mean = np.mean(train_scores, axis=1)\n",
-    "train_std = np.std(train_scores, axis=1)\n",
-    "val_mean = np.mean(val_scores, axis=1)\n",
+    "train_mean = np.mean(train_scores, axis=1)\r\n",
+    "train_std = np.std(train_scores, axis=1)\r\n",
+    "val_mean = np.mean(val_scores, axis=1)\r\n",
     "val_std = np.std(val_scores, axis=1)"
    ],
    "outputs": [],
@@ -572,10 +572,10 @@
    "cell_type": "code",
    "execution_count": 26,
    "source": [
-    "df = pd.DataFrame( \\\n",
-    "    data=np.stack((train_sizes, train_mean, train_std, val_mean, val_std), axis=1),\n",
-    "    columns=['n_samples','train_mean','train_std','val_mean','val_std'])\n",
-    "df = df.set_index('n_samples')\n",
+    "df = pd.DataFrame( \\\r\n",
+    "    data=np.stack((train_sizes, train_mean, train_std, val_mean, val_std), axis=1),\r\n",
+    "    columns=['n_samples','train_mean','train_std','val_mean','val_std'])\r\n",
+    "df = df.set_index('n_samples')\r\n",
     "display(df)"
    ],
    "outputs": [
@@ -713,33 +713,33 @@
    "cell_type": "code",
    "execution_count": 27,
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "plt.plot(train_sizes, train_mean,\n",
-    "         color='blue', marker='o',\n",
-    "         markersize=5, label='training accuracy')\n",
-    "\n",
-    "plt.fill_between(train_sizes,\n",
-    "                 train_mean + train_std,\n",
-    "                 train_mean - train_std,\n",
-    "                 alpha=0.15, color='blue')\n",
-    "\n",
-    "plt.plot(train_sizes, val_mean,\n",
-    "         color='green', linestyle='--',\n",
-    "         marker='s', markersize=5,\n",
-    "         label='validation accuracy')\n",
-    "\n",
-    "plt.fill_between(train_sizes,\n",
-    "                 val_mean + val_std,\n",
-    "                 val_mean - val_std,\n",
-    "                 alpha=0.15, color='green')\n",
-    "\n",
-    "plt.grid()\n",
-    "plt.xlabel('Number of training samples')\n",
-    "plt.ylabel('Accuracy')\n",
-    "plt.legend(loc='lower right')\n",
-    "plt.ylim([0.8, 1.0])\n",
-    "plt.tight_layout()\n",
+    "import matplotlib.pyplot as plt\r\n",
+    "\r\n",
+    "plt.plot(train_sizes, train_mean,\r\n",
+    "         color='blue', marker='o',\r\n",
+    "         markersize=5, label='training accuracy')\r\n",
+    "\r\n",
+    "plt.fill_between(train_sizes,\r\n",
+    "                 train_mean + train_std,\r\n",
+    "                 train_mean - train_std,\r\n",
+    "                 alpha=0.15, color='blue')\r\n",
+    "\r\n",
+    "plt.plot(train_sizes, val_mean,\r\n",
+    "         color='green', linestyle='--',\r\n",
+    "         marker='s', markersize=5,\r\n",
+    "         label='validation accuracy')\r\n",
+    "\r\n",
+    "plt.fill_between(train_sizes,\r\n",
+    "                 val_mean + val_std,\r\n",
+    "                 val_mean - val_std,\r\n",
+    "                 alpha=0.15, color='green')\r\n",
+    "\r\n",
+    "plt.grid()\r\n",
+    "plt.xlabel('Number of training samples')\r\n",
+    "plt.ylabel('Accuracy')\r\n",
+    "plt.legend(loc='lower right')\r\n",
+    "plt.ylim([0.8, 1.0])\r\n",
+    "plt.tight_layout()\r\n",
     "plt.show()"
    ],
    "outputs": [
