--- a/Topic 05 - Model Tuning/C33 - Nested CV.ipynb
+++ b/Topic 05 - Model Tuning/C33 - Nested CV.ipynb
@@ -16,29 +16,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from sklearn.datasets import load_breast_cancer\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.svm import SVC\n",
-    "\n",
-    "# Load data\n",
-    "dataObj = load_breast_cancer()\n",
-    "X = dataObj.data\n",
-    "y = dataObj.target\n",
-    "\n",
-    "# Splitting data\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, \n",
-    "    stratify=y,\n",
-    "    test_size=0.30,\n",
-    "    random_state=1)\n",
-    "\n",
-    "# Model\n",
-    "pipe_svc = Pipeline([('scl', StandardScaler()),\n",
+    "import pandas as pd\r\n",
+    "import numpy as np\r\n",
+    "from sklearn.datasets import load_breast_cancer\r\n",
+    "from sklearn.model_selection import train_test_split\r\n",
+    "from sklearn.preprocessing import StandardScaler\r\n",
+    "from sklearn.pipeline import Pipeline\r\n",
+    "from sklearn.svm import SVC\r\n",
+    "\r\n",
+    "# Load data\r\n",
+    "dataObj = load_breast_cancer()\r\n",
+    "X = dataObj.data\r\n",
+    "y = dataObj.target\r\n",
+    "\r\n",
+    "# Splitting data\r\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, \r\n",
+    "    stratify=y,\r\n",
+    "    test_size=0.30,\r\n",
+    "    random_state=1)\r\n",
+    "\r\n",
+    "# Model\r\n",
+    "pipe_svc = Pipeline([('scl', StandardScaler()),\r\n",
     "            ('clf', SVC(random_state=1))])"
    ],
    "outputs": [],
@@ -46,17 +46,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "source": [
-    "param_range = [0.0001, 0.001, 0.01, 0.1, 1.0, 10.0, 100.0, 1000.0]\n",
-    "\n",
-    "set1 = {'clf__C': param_range,\n",
-    "        'clf__kernel': ['linear']}\n",
-    "\n",
-    "set2 = {'clf__C': param_range,\n",
-    "        'clf__gamma': param_range,\n",
-    "        'clf__kernel': ['rbf']}\n",
-    "\n",
+    "param_range = [0.0001, 0.001, 0.01, 0.1, 1.0, 10.0, 100.0, 1000.0]\r\n",
+    "\r\n",
+    "set1 = {'clf__C': param_range,\r\n",
+    "        'clf__kernel': ['linear']}\r\n",
+    "\r\n",
+    "set2 = {'clf__C': param_range,\r\n",
+    "        'clf__gamma': param_range,\r\n",
+    "        'clf__kernel': ['rbf']}\r\n",
+    "\r\n",
     "param_grid = [set1, set2]"
    ],
    "outputs": [],
@@ -65,36 +65,36 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## 5x2 nested stratified k-fold cross-validation"
+    "## 10x3 nested stratified k-fold cross-validation"
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "source": [
-    "from sklearn.model_selection import GridSearchCV\n",
-    "\n",
-    "# Construct grid search estimator\n",
-    "gs = GridSearchCV(estimator=pipe_svc,\n",
-    "                  param_grid=param_grid,\n",
-    "                  scoring='accuracy',\n",
-    "                  cv=2)"
+    "from sklearn.model_selection import GridSearchCV\r\n",
+    "\r\n",
+    "# Construct grid search estimator\r\n",
+    "gs = GridSearchCV(estimator=pipe_svc,\r\n",
+    "                  param_grid=param_grid,\r\n",
+    "                  scoring='accuracy',\r\n",
+    "                  cv=3)"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "source": [
-    "from sklearn.model_selection import cross_val_score\n",
-    "\n",
-    "# Putting grid search into stratify k-fold cross validator\n",
-    "scores = cross_val_score(gs, X_train, y_train, scoring='accuracy', cv=5)\n",
-    "\n",
-    "print(\"\\nCrossed-validation accuracy\")  \n",
-    "print(f\"Mean:{np.mean(scores):6.3f}\")\n",
+    "from sklearn.model_selection import cross_val_score\r\n",
+    "\r\n",
+    "# Putting grid search into stratify k-fold cross validator\r\n",
+    "scores = cross_val_score(gs, X_train, y_train, scoring='accuracy', cv=5)\r\n",
+    "\r\n",
+    "print(\"\\nCrossed-validation accuracy\")  \r\n",
+    "print(f\"Mean:{np.mean(scores):6.3f}\")\r\n",
     "print(f\"Std:{np.std(scores):6.3f}\")"
    ],
    "outputs": [
@@ -104,8 +104,8 @@
      "text": [
       "\n",
       "Crossed-validation accuracy\n",
-      "Mean: 0.982\n",
-      "Std: 0.015\n"
+      "Mean: 0.980\n",
+      "Std: 0.019\n"
      ]
     }
    ],
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "source": [
     "gs.fit(X_train, y_train)"
    ],
@@ -122,7 +122,7 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "GridSearchCV(cv=2,\n",
+       "GridSearchCV(cv=3,\n",
        "             estimator=Pipeline(steps=[('scl', StandardScaler()),\n",
        "                                       ('clf', SVC(random_state=1))]),\n",
        "             param_grid=[{'clf__C': [0.0001, 0.001, 0.01, 0.1, 1.0, 10.0, 100.0,\n",
@@ -137,14 +137,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 22
+     "execution_count": 12
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "source": [
     "gs.best_params_"
    ],
@@ -157,17 +157,17 @@
       ]
      },
      "metadata": {},
-     "execution_count": 23
+     "execution_count": 13
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "source": [
-    "y_pred = gs.predict(X_test)\n",
-    "testing_accuracy = gs.score(X_test,y_test)\n",
+    "y_pred = gs.predict(X_test)\r\n",
+    "testing_accuracy = gs.score(X_test,y_test)\r\n",
     "print(f\"Testing accuracy: {testing_accuracy:6.3f}\")"
    ],
    "outputs": [
@@ -207,7 +207,7 @@
    "version": "3.8.8"
   },
   "interpreter": {
-   "hash": "44cfd549216d83088fe60783a751b73ec1b18bc6a03494afd4c2d311310c0619"
+   "hash": "be725e0de8fb3f5fda9b0118bdf797fa9814e28e467c1cce77c5b9910d8a1786"
   }
  },
  "nbformat": 4,
