update tuning and files

--- a/Topic 05 - Model Tuning/T1_CNC_Tuning.ipynb
+++ b/Topic 05 - Model Tuning/T1_CNC_Tuning.ipynb
@@ -283,9 +283,11 @@
     "clf = RF(n_estimators=50)\r\n",
     "\r\n",
     "# Construct pipeline object\r\n",
-    "pipe = Pipeline([('scl', StandardScaler()),\r\n",
-    "                    ('l1',l1),\r\n",
-    "                    ('clf', clf)])"
+    "pipe = Pipeline([\r\n",
+    "    ('var', var)\r\n",
+    "    ('scl', StandardScaler()),\r\n",
+    "    ('l1',l1),\r\n",
+    "    ('clf', clf)])"
    ],
    "outputs": [],
    "metadata": {}
